sucessfully finished tutorial example traveltime inversion with unknown offsets

--- a/doc/tutorial/appendix.tex
+++ b/doc/tutorial/appendix.tex
@@ -279,7 +279,7 @@ complex values using Complex = \lstinline|std::complex<double>| as a vector \lst
 
 modelling column-compressed sparse matrix \lstinline|SparseMatrix|
 
-\subsectin{Block-Matrices}
+\subsection{Block-Matrices}
 Large matrices for Jacobian (J) and constraint matrix (C)
 
 holding individual matrices by stacking matrices saves space and makes allocation easier
