--- a/python/README
+++ b/python/README
@@ -28,6 +28,8 @@ check for:
 ------------------------------------------------------------
 ------------------------------------------------------------
 FAQ:
+Q: Under Windows there is an error building pygimli complaining about """... not found.
+A: Call mkcache.sh, python generate_python_code.py and make -f Makefile.msys by hand.
 ------------------------------------------------------------
 --------------------
     
