--- a/doc/tutorial/jointinversion.tex
+++ b/doc/tutorial/jointinversion.tex
@@ -69,7 +69,7 @@ In the code we create a synthetic model \lstinline|synthModel|, calculate the fo
 The inversion is converging to a $\chi^2$ value of about 1, i.e. we fit the data within error bounds.
 Finally a resolution analysis is done to determine how well the individual parameters (2 thicknesses and 3 resistivities) are determined.
 We can compare it with single inversions by drastically increasing the error level for one of the methods by a factor of 10.
-\ref{tab:dcemresolution} shows the resulting diagonal values of the resolution matrix for a three-layer model.
+Table \ref{tab:dcemresolution} shows the resulting diagonal values of the resolution matrix for a three-layer model.
 The first layer is well resolved in all variants except the first layer resistivity for EM.
 Considering the values for the other resistivities we can clearly see that EM is detecting the good conductor and DC describes the resistor as expected from the theory.
 
